# PRESENT

./: .eslintcache  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE_SYNC_BUS.md  BROWSER_TRANSCRIPTION_SOLUTION.md  CLAUDE.md  Dockerfile  PARALLEL_TOOLS_INTEGRATION.md  README.md  SUBAGENT_PROMPT_PRE-101.md  SUPABASE_SETUP.md  TRANSCRIPTION_SERVICE_SETUP.md  TYPESCRIPT_AGENT_SETUP.md  babel.config.test.js  biome.json  canvas.plan.md  eslint.config.mjs  example.env.local  jest.config.cjs  jest.config.js  jest.setup.js  jest.setup.ts  middleware.test.ts  middleware.ts  next.config.ts  package-lock.json  package.json  parity-client.js  playwright.config.ts  playwright.reset.config.ts  proxy.ts  railway.toml  repro_zod.ts  setup.sh  tailwind.config.ts  test-agent-dispatch.js  test-responses-api.js  test-transcription-api.js  tldraw-4.1.2.tgz  (+9 more)
.codex/: config.toml
__mocks__/: tambo-ai.js
docs/: ARCHITECTURE_SIMPLIFIED.md  ARCHITECTURE_SYNC_BUS.md  COMPONENT_SYSTEM.md  FIRST_PRINCIPLES.md  HOW_TO_CREATE_CUSTOM_COMPONENTS.md  HOW_TO_CREATE_TAMBO_COMPONENTS.md  IMPLEMENTATION_COMPLETE.md  SYSTEM_PROMPTS_OVERVIEW.md  THREE_AGENT_ARCHITECTURE.md  VOICE_AGENT_FLOW.md  agent-observability-admin.md  canvas-agent-progress.md  canvas-agent-smoke-tests.md  canvas-agent.md  canvas-steward-playbook.md  cloudflare-edge-ingress.md  code-organization.md  demo-race-night-v2.md  (+20 more)
present/: pyproject.toml
present/src/present/: api.py  crew.py  main.py
present/src/present/config/: agents.yaml  tasks.yaml
present/src/present/tools/: __init__.py  enhanced_youtube_tool.py  youtube_tool.py
(+2136 files in other folders)
